--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "koa-combine-routers": "^4.0.2",
     "koa-cors": "0.0.16",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^4.0.3",
     "koa-logger": "^3.2.1",
     "koa-onerror": "^4.1.0",
     "koa-router": "^10.1.1",
